# CircuitPython_USB_Host_Descriptor_Parser

./: README.rst  pyproject.toml  relic_usb_host_descriptor_parser.py  usb_host_descriptor_parser.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: usb_host_descriptor_parser_simpletest.py
relic_usb_host_descriptor_parser/: __init__.py  hid_report.py
