# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Cooper Dalrymple
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-usb-host-descriptor-parser"
description = "Helper to parse USB descriptors"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cooper Dalrymple", email = "me@dcdalrymple.com"}
]
urls = {Homepage = "https://github.com/relic-se/CircuitPython_USB_Host_Descriptor_Parser"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "relic_usb_host_descriptor_parser",
    "usb",
    "host",
    "descriptor",
    "parser",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["relic_usb_host_descriptor_parser"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
